test/corpus/base.txt
===============================================================================
Header & body
===============================================================================
From: csp

body

---
(rfc5322_message
  (headers
    (header_from
      (correspondent)))
  (body_separator)
  (body))

===============================================================================
Header fields
===============================================================================
From: csp
To: csp, csp
Subject: subject
Date: Tue, 17 Mar 2026 15:27:34 +0100
Other: other

---
(rfc5322_message
  (headers
    (header_from
      (correspondent))
    (header_email
      (correspondent)
      (correspondent))
    (header_subject
      (subject))
    (header_date
      (date))
    (header_other
      (contents))))

===============================================================================
GMT date
===============================================================================
Date: Tue, 17 Mar 2026 15:27:34 GMT

---
(rfc5322_message
  (headers
    (header_date
      (date))))

===============================================================================
Multi-line headers
===============================================================================
To: csp, csp,
  csp
Subject: Subject multiline across
  lines
X-Foo: Foo
  Bar

---
(rfc5322_message
  (headers
    (header_email
      (correspondent)
      (correspondent)
      (correspondent))
    (header_subject
      (subject))
    (header_other
      (contents))))

===============================================================================
===============================================================================

---
