test/corpus/correspondents.txt
===============================================================================
Just email address
===============================================================================
From: foo@example.org

---

(rfc5322_message
  (headers
    (header_from
      (label_from)
      (senders
        (correspondent
          (email_address))))))

===============================================================================
Bracketed email address
===============================================================================
From: <foo@example.org>

---

(rfc5322_message
  (headers
    (header_from
      (label_from)
      (senders
        (correspondent
          (email_address))))))

===============================================================================
Email address with trailing comma
===============================================================================
From: <foo@example.org>,

---

(rfc5322_message
  (headers
    (header_from
      (label_from)
      (senders
        (correspondent
          (email_address))))))

===============================================================================
Comma-separated correspondents
===============================================================================
From: foo@example.org, <bar@example.org>

---

(rfc5322_message
  (headers
    (header_from
      (label_from)
      (senders
        (correspondent
          (email_address))
        (correspondent
          (email_address))))))

===============================================================================
Comma-separated correspondents across lines
===============================================================================
From: foo@example.org,
  <bar@example.org>

---

(rfc5322_message
  (headers
    (header_from
      (label_from)
      (senders
        (correspondent
          (email_address))
        (correspondent
          (email_address))))))

===============================================================================
Comma-separated correspondents across lines with whitespace after comma
===============================================================================
From: foo@example.org, 
  <bar@example.org>

---

(rfc5322_message
  (headers
    (header_from
      (label_from)
      (senders
        (correspondent
          (email_address))
        (correspondent
          (email_address))))))

===============================================================================
Comma-separated correspondents with a trailing comma
===============================================================================
From: foo@example.org,
  <bar@example.org>,

---

(rfc5322_message
  (headers
    (header_from
      (label_from)
      (senders
        (correspondent
          (email_address))
        (correspondent
          (email_address))))))

===============================================================================
Name and email
===============================================================================
From: Foo Bar <foo@example.org>

---

(rfc5322_message
  (headers
    (header_from
      (label_from)
      (senders
        (correspondent
          (name)
          (email_address))))))

===============================================================================
Name and email, split in name
===============================================================================
From: Foo
 Bar <foo@example.org>

---

(rfc5322_message
  (headers
    (header_from
      (label_from)
      (senders
        (correspondent
          (name)
          (email_address))))))

===============================================================================
Name and email, split after name
===============================================================================
From: Foo Bar
 <foo@example.org>

---

(rfc5322_message
  (headers
    (header_from
      (label_from)
      (senders
        (correspondent
          (name)
          (email_address))))))

===============================================================================
Quoted name and email
===============================================================================
From: "Foo X. Bar" <foo@example.org>

---

(rfc5322_message
  (headers
    (header_from
      (label_from)
      (senders
        (correspondent
          (quoted_name)
          (email_address))))))

===============================================================================
Quoted name and email, split in name
===============================================================================
From: "Foo X.
 Bar" <foo@example.org>

---

(rfc5322_message
  (headers
    (header_from
      (label_from)
      (senders
        (correspondent
          (quoted_name)
          (email_address))))))

===============================================================================
Email header with alias or local email address
===============================================================================
To: bestfriend

---

(rfc5322_message
  (headers
    (header_rcpt
      (label_rcpt)
      (recipients
        (correspondent
          (name))))))

===============================================================================
Email header with named empty group
===============================================================================
To: friends:;

---

(rfc5322_message
  (headers
    (header_rcpt
      (label_rcpt)
      (recipients
        (group)))))

===============================================================================
Email header with named group
===============================================================================
To: friends: foo@example.org, John <john@example.net>;

---

(rfc5322_message
  (headers
    (header_rcpt
      (label_rcpt)
      (recipients
        (group
         (correspondent
          (email_address))
         (correspondent
          (name)
          (email_address)))))))

===============================================================================
Unquoted correspondent name with dash
===============================================================================
To: Company - Someone <someone@example.org>

---

(rfc5322_message
  (headers
    (header_rcpt
      (label_rcpt)
      (recipients
       (correspondent
        (name)
        (email_address))))))

===============================================================================
Quoted name with Umlaut and email
===============================================================================
From: "Föö Bär" <foo@example.org>

---

(rfc5322_message
  (headers
    (header_from
      (label_from)
      (senders
        (correspondent
          (quoted_name)
          (email_address))))))

===============================================================================
Unquoted name with Umlaut and email (not RFC-compliant)
===============================================================================
From: Föö Bär <foo@example.org>

---

(rfc5322_message
  (headers
    (header_from
      (label_from)
      (senders
        (correspondent
          (name)
          (email_address))))))
